# duke3d_upscaler_v2

./: .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  pyproject.toml
.agents/: action_log.md  memory_bank.md
.pipeline/: config.yaml
docs/: testing-guide.md  tooling.md  user-guide.md
docs/decisions/: 0001-project-restructuring.md
src/pipeline/: main.py  workflow.py
src/pipeline/phases/: base.py  convert.py  extract.py  extract_alpha.py  game_files.py  generate_mod.py  premultiply.py  reattach_alpha.py  scrub.py  upscale.py  upscale_alpha.py  verify.py
src/pipeline/utils/: compatibility.py  config_validator.py  error_handling.py  gpu.py  logging.py  model.py  paths.py  soundfont.py  state.py  verifier.py
src/tests/: run_tests.py  test_complete.py  test_end_to_end.py  test_execution.py  test_execution_order.py  test_integration.py  test_phases.py  test_pipeline.py  test_pipeline_workflow.py  test_workflow.py
